--- a/package.json
+++ b/package.json
@@ -26,10 +26,11 @@
     "reflect-metadata": "0.1.2"
   },
   "dependencies": {
-    "angular2": "2.0.0-beta.11",
+    "angular2": "2.0.0-beta.15",
     "core-js": "^2.2.0",
+    "ng2-bootstrap": "^1.0.13",
     "rxjs": "5.0.0-beta.2",
-    "zone.js": "0.6.4"
+    "zone.js": "0.6.10"
   },
   "keywords": [
     "Angular2",
