--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.15",
+    "bootstrap": "^3.3.6",
     "core-js": "^2.2.0",
     "ng2-bootstrap": "^1.0.13",
     "rxjs": "5.0.0-beta.2",
